--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li id="onpage"><a href="index.html">Welcome</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="chicagostreetart.html">Chicago Street Art</a></li>
+        <li><a href="map.html">Map!</a></li>
       </ul>
       </div>
     </nav>
