--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">Welcome</a></li>
         <li id="onpage"><a href="resume.html">Resume</a></li>
         <li><a href="chicagostreetart.html">Chicago Street Art</a></li>
+        <li><a href="map.html">Map!</a></li>
       </ul>
       </div>
     </nav>
