changed background image

--- a/map.html
+++ b/map.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   </head>
-  <body id="resume_background">
+  <body id="map_background">
     <nav id="nav">
       <div id="navbar-contain">
       <ul>
