created a script js file

--- a/chicagostreetart.html
+++ b/chicagostreetart.html
@@ -5,6 +5,7 @@
     <title>Chicago Street Art</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
   </head>
   <body id="streetart_background">
     <nav id="nav">
