tried embedding a map

--- a/map.html
+++ b/map.html
@@ -18,8 +18,9 @@
       </ul>
       </div>
     </nav>
-<section class="wrapper">
   <h1>Google Map!</h1>
+  <section class="wrapper">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d94934.20629714557!2d-87.91947527497477!3d41.9639084067463!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fcd7b21633e21%3A0xafa2d5ca873079ba!2sRamen%20Wasabi!5e0!3m2!1sen!2sus!4v1682125295793!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
   <div class="goodbye">
     <p>Thanks for visiting!</p>
