--- a/map.html
+++ b/map.html
@@ -23,13 +23,10 @@
   </section>
   <section class="wrapper">
     <h2>Wasabi Ramen in Logan Square, Chicago~</h2>
-    <!--The div element for the map -->
     <div id="map"></div>
-    <!-- prettier-ignore -->
-    <script>(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
-        ({key: "AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg", v: "beta"});</script>
-        </div>
-        </section>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYer5l9w7HjCsz2Qnyl02gEh2613SW-Rc&callback=initMap" async defer></script>
+    </div>
+    </section>
   <div class="goodbye">
     <p>Thanks for visiting!</p>
     <p>Created by Anna Komkova for ITMD 361 Spring 2023</p>
