--- a/map.html
+++ b/map.html
@@ -24,7 +24,7 @@
   <section class="wrapper">
     <h2>Wasabi Ramen in Logan Square, Chicago~</h2>
     <div id="map"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPfyvsr7qP4yyrL_Fpttar9lWsOBoBA-s&callback=initMap" async defer></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPfyvsr7qP4yyrL_Fpttar9lWsOBoBA-s&callback=initMap"></script>
     </div>
     </section>
   <div class="goodbye">
