--- a/map.html
+++ b/map.html
@@ -18,7 +18,9 @@
       </ul>
       </div>
     </nav>
+  <section class="wrapper">
   <h1>Google Map for some good ramen in Chicago!</h1>
+  </section>
   <section class="wrapper">
     <h2>Wasabi Ramen in Logan Square, Chicago~</h2>
     <div id="map"></div>
