--- a/map.html
+++ b/map.html
@@ -23,7 +23,7 @@
   </section>
   <section class="wrapper">
     <h2>Wasabi Ramen in Logan Square, Chicago~</h2>
-    <div id="map"></div>
+    <div id="map">
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPfyvsr7qP4yyrL_Fpttar9lWsOBoBA-s&callback=initMap"></script>
     </div>
     </section>
