changed an image name

--- a/respnavbar.html
+++ b/respnavbar.html
@@ -6,13 +6,21 @@
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body id="test">
 <h2>Responsive navigation menu</h2>
 <p>Resize the browser window to see the effect: When the screen is less than 600px, the navigation menu will be displayed vertically instead of horizontally.</p>
 <div class="topnav">
   <a href="#">Link</a>
   <a href="#">Link</a>
   <a href="#">Link</a>
+</div>
+<section class="wrapper">
+<h1>Hi there!</h1>
+<p>I will be testing out media queries on this page</p>
+</section>
+<div class="goodbye">
+<p>Thanks for visiting!</p>
+<p>Created by Anna Komkova for ITMD 361 Spring 2023</p>
 </div>
 </body>
 </html>
