--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="resume.html">Resume</a></li>
         <li><a href="chicagostreetart.html">Chicago Street Art</a></li>
         <li><a href="map.html">Map!</a></li>
-        <li><a href="respnavbar.html">Navbar Test!</a></li>
+        <li><a href="test.html">Test!</a></li>
       </ul>
       </div>
     </nav>
