--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" href="css/style.css">
 </head>
-<body id="test">
+<body id="test_background">
 <h2>Responsive navigation menu</h2>
 <p>Resize the browser window to see the effect: When the screen is less than 600px, the navigation menu will be displayed vertically instead of horizontally.</p>
 <div class="topnav">
