added the actual navbar options to the test

--- a/test.html
+++ b/test.html
@@ -7,12 +7,12 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="test_background">
-<h2>Responsive navigation menu</h2>
-<p>Resize the browser window to see the effect: When the screen is less than 600px, the navigation menu will be displayed vertically instead of horizontally.</p>
 <div class="topnav">
-  <a href="#">Link</a>
-  <a href="#">Link</a>
-  <a href="#">Link</a>
+  <li><a href="index.html">Welcome</a></li>
+  <li><a href="resume.html">Resume</a></li>
+  <li><a href="chicagostreetart.html">Chicago Street Art</a></li>
+  <li><a href="map.html">Map!</a></li>
+  <li id="onpage"><a href="test.html">Test!</a></li>
 </div>
 <section class="wrapper">
 <h1>Hi there!</h1>
