--- a/test.html
+++ b/test.html
@@ -8,15 +8,12 @@
 </head>
 <body id="test_background">
 <nav class="topnav">
-  <div id="nav-contain">
-  <ul>
     <li><a href="index.html">Welcome</a></li>
     <li><a href="resume.html">Resume</a></li>
     <li><a href="chicagostreetart.html">Chicago Street Art</a></li>
     <li><a href="map.html">Map!</a></li>
     <li id="onpage"><a href="test.html">Test!</a></li>
-  </ul>
-</div>
+</class>
 </nav>
 <section class="wrapper">
 <h1>Hi there!</h1>
