--- a/test.html
+++ b/test.html
@@ -8,11 +8,11 @@
 </head>
 <body id="test_background">
 <div class="topnav">
-    <li><a href="index.html">Welcome</a></li>
-    <li><a href="resume.html">Resume</a></li>
-    <li><a href="chicagostreetart.html">Chicago Street Art</a></li>
-    <li><a href="map.html">Map!</a></li>
-    <li id="onpage"><a href="test.html">Test!</a></li>
+    <a href="index.html">Welcome</a>
+    <a href="resume.html">Resume</a>
+    <a href="chicagostreetart.html">Chicago Street Art</a>
+    <a href="map.html">Map!</a>
+    <a href="test.html">Test!</a>
 </div>
 <section class="wrapper">
 <h1>Hi there!</h1>
