deleted the test link, changed the test navbar

--- a/test.html
+++ b/test.html
@@ -7,13 +7,17 @@
 <link rel="stylesheet" href="css/style.css">
 </head>
 <body id="test_background">
-<div class="topnav">
-    <a href="index.html">Welcome</a>
-    <a href="resume.html">Resume</a>
-    <a href="chicagostreetart.html">Chicago Street Art</a>
-    <a href="map.html">Map!</a>
-    <a href="test.html">Test!</a>
-</div>
+  <nav id="nav">
+    <div id="nav-contain">
+    <ul>
+      <li><a href="index.html">Welcome</a></li>
+      <li><a href="resume.html">Resume</a></li>
+      <li><a href="chicagostreetart.html">Chicago Street Art</a></li>
+      <li><a href="map.html">Map!</a></li>
+      <li id="onpage"><a href="test.html">Test!</a></li>
+    </ul>
+    </div>
+  </nav>
 <section class="wrapper">
 <h1>Hi there!</h1>
 <p>I will be testing out media queries on this page</p>
