--- a/test.html
+++ b/test.html
@@ -22,6 +22,9 @@
 <h1>Hi there!</h1>
 <p>I will be testing out media queries on this page</p>
 </section>
+<div class="intro">
+  
+</div>
 <div class="goodbye">
 <p>Thanks for visiting!</p>
 <p>Created by Anna Komkova for ITMD 361 Spring 2023</p>
