tried adding a website icon

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Welcome</title>
-    <link rel="icon" href= "/media/anya_forger.jpg" type = "image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="media/anya_forger.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body id="welcome_background">
     <nav id="nav">
