--- a/chicagostreetart.html
+++ b/chicagostreetart.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
+    <link rel="icon" href="media/anya_forger.jpg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body id="streetart_background">
     <nav id="nav">
