--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,8 @@
   <title>Resume</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="media/anya_forger.jpg">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body id="resume_background">
     <nav id="nav">
