organized the media folder

--- a/map.html
+++ b/map.html
@@ -22,7 +22,8 @@
     </nav>
   <section class="wrapper">
   <h2>Google Map for some good ramen in Chicago!</h2>
-    <p>Wasabi Ramen in Logan Square, Chicago~</p>
+    <p><strong>Wasabi Ramen in Logan Square, Chicago~</strong></p>
+    <p>Probabaly my favorite spot for casual yet delicious ramen and Takoyaki!</p>
     <div id="map">
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPfyvsr7qP4yyrL_Fpttar9lWsOBoBA-s&callback=initMap"></script>
     </div>
