added photos to the map page

--- a/map.html
+++ b/map.html
@@ -20,14 +20,21 @@
       </ul>
       </div>
     </nav>
-  <section class="wrapper">
+  <div class="wrapper">
   <h2>Google Map for some good ramen in Chicago!</h2>
     <p><strong>Wasabi Ramen in Logan Square, Chicago~</strong></p>
     <p>Probabaly my favorite spot for casual yet delicious ramen and Takoyaki!</p>
     <div id="map">
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPfyvsr7qP4yyrL_Fpttar9lWsOBoBA-s&callback=initMap"></script>
     </div>
-    </section>
+  </div>
+    <div class="wrapper">
+      <img class="slides" src="media/wasabi/wasabi1.jpg">
+      <img class="slides" src="media/wasabi/wasabi2.jpg">
+
+      <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+      <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+    </div>
   <div class="goodbye">
     <p>Thanks for visiting!</p>
     <p>Created by Anna Komkova for ITMD 361 Spring 2023</p>
